@@ -1,7 +1,7 @@
 Package: Rcpp
 Title: Seamless R and C++ Integration
 Version: 1.0.13.6
-Date: 2024-11-25
+Date: 2025-01-01
 Authors@R: c(person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
                     comment = c(ORCID = "0000-0001-6419-907X")),
              person("Romain", "Francois", role = "aut",
